# sanic_test_task

./: .gitignore  README.md  pyproject.toml
src/: server.py
