[tool.poetry]
name = "sanic_test_task"
version = "0.1.0"
description = ""
authors = ["Kurochkin Daniil <kurochkindaniil02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
sanic-restful-api = "^0.1.3"
sanic = "^22.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
